# devlair

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/agents/: pr-efficiency-reviewer.md  pr-fix-applier.md  pr-quality-reviewer.md  pr-readme-reviewer.md  pr-readme-updater.md  pr-reuse-reviewer.md  pr-security-reviewer.md
.claude/commands/: board-reconcile.md  pr.md  review-pr.md
.claude/skills/: board.md  review-pr.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  feature.yml
.github/workflows/: ci-v2.yml  commit-messages.yml  e2e-uninstall.yml  lint.yml  release-please.yml  release.yml
cli/: CHANGELOG.md  biome.json  package.json  tsconfig.json
cli/modules/: _lib.sh  claude.sh  devtools.sh  firewall.sh  github.sh  gnome-terminal.sh  homebrew.sh  macos-terminal.sh  rclone.sh  shell.sh  ssh.sh  system.sh  tailscale.sh  timezone.sh  tmux.sh  upgrade.sh  zsh.sh
cli/src/: index.tsx
devlair/: __init__.py  cli.py  console.py  context.py  runner.py
devlair/features/: audit.py  claude.py  claw.py  disable_password.py  doctor.py  filesystem.py  profile.py  sync.py  update.py  upgrade.py
devlair/modules/: __init__.py  claude.py  claw.py  devtools.py  firewall.py  github.py  ssh.py  (+9 more)
modules/: _lib.sh  claude.sh  claw.sh  devtools.sh  firewall.sh  system.sh  tailscale.sh  timezone.sh  upgrade.sh
scripts/: build.sh  check-commit-msg.sh  wsl-smoke-test.sh
tests/: conftest.py
(+86 files in other folders)
