[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devlair"
version = "0.2.0"
description = "Set up your dev lair from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "questionary>=2.0",
]

[project.scripts]
devlair = "devlair.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["devlair"]

[dependency-groups]
dev = [
    "pyinstaller>=6",
    "pytest>=8",
    "pytest-mock>=3.14",
]
