[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devlair"
dynamic = ["version"]
description = "Set up your dev lair from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "questionary>=2.0",
]

[project.scripts]
devlair = "devlair.cli:app"

[tool.hatch.version]
path = "devlair/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["devlair"]

[dependency-groups]
dev = [
    "pyinstaller>=6",
    "pytest>=8",
    "pytest-mock>=3.14",
    "ruff>=0.15",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E701"]  # E501: string literals (shell/tmux/Rich) exceed 120; E701: compact tabular one-liners

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
